--- a/Confidence Score & Statistics.ipynb
+++ b/Confidence Score & Statistics.ipynb
@@ -305,28 +305,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
-    "neutral_avg_conf = mean(neutral_hist.values())*100\n",
-    "offensive_avg_conf = mean(offensive_hist.values())*100\n",
-    "hate_avg_conf = mean(hate_hist.values())*100\n",
-    "all_avg_conf = mean(all_hist.values())*100"
+    "neutral_avg_conf = mean(neutral_hist.values())\n",
+    "offensive_avg_conf = mean(offensive_hist.values())\n",
+    "hate_avg_conf = mean(hate_hist.values())\n",
+    "all_avg_conf = mean(all_hist.values())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "94.05874896893044"
+       "0.9405874896893044"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,16 +337,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "81.25090157154673"
+       "0.8125090157154673"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,16 +357,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "74.6731221342226"
+       "0.7467312213422259"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,16 +377,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "86.5844317320284"
+       "0.865844317320284"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
